--- a/NLP/NLP try 1 with LSTM.ipynb
+++ b/NLP/NLP try 1 with LSTM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "9         0              0             0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "4        1    0         1              0             0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,16 +297,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x164c1235198>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2bcaecddef0>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
     "\n",
     "vocab_size = len(tokenizer.word_index) + 1\n",
     "#what is max len\n",
-    "maxlen = 200\n",
+    "maxlen = 20\n",
     "\n",
     "X_train = pad_sequences(X_train, padding='post', maxlen=maxlen)\n",
     "X_test = pad_sequences(X_test, padding='post', maxlen=maxlen)"
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "_io.TextIOWrapper"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,24 +435,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_1\"\n",
+      "Model: \"model\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_2 (InputLayer)         [(None, 200)]             0         \n",
+      "input_1 (InputLayer)         [(None, 20)]              0         \n",
       "_________________________________________________________________\n",
-      "embedding_1 (Embedding)      (None, 200, 100)          396900    \n",
+      "embedding (Embedding)        (None, 20, 100)           396900    \n",
       "_________________________________________________________________\n",
-      "lstm_1 (LSTM)                (None, 128)               117248    \n",
+      "lstm (LSTM)                  (None, 128)               117248    \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 5)                 645       \n",
+      "dense (Dense)                (None, 5)                 645       \n",
       "=================================================================\n",
       "Total params: 514,793\n",
       "Trainable params: 117,893\n",
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -476,15 +476,15 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "37/37 [==============================] - 9s 256ms/step - loss: 0.5944 - acc: 0.1865 - val_loss: 0.5997 - val_acc: 0.1931\n",
+      "37/37 [==============================] - 1s 30ms/step - loss: 0.6219 - acc: 0.1923 - val_loss: 0.5991 - val_acc: 0.1931\n",
       "Epoch 2/5\n",
-      "37/37 [==============================] - 9s 256ms/step - loss: 0.5947 - acc: 0.1865 - val_loss: 0.6007 - val_acc: 0.1931\n",
+      "37/37 [==============================] - 1s 21ms/step - loss: 0.5945 - acc: 0.1865 - val_loss: 0.5990 - val_acc: 0.1931\n",
       "Epoch 3/5\n",
-      "37/37 [==============================] - 10s 265ms/step - loss: 0.5940 - acc: 0.1865 - val_loss: 0.5992 - val_acc: 0.1931\n",
+      "37/37 [==============================] - 1s 21ms/step - loss: 0.5944 - acc: 0.1865 - val_loss: 0.5996 - val_acc: 0.1931\n",
       "Epoch 4/5\n",
-      "37/37 [==============================] - 10s 262ms/step - loss: 0.5942 - acc: 0.1865 - val_loss: 0.5991 - val_acc: 0.1931\n",
+      "37/37 [==============================] - 1s 21ms/step - loss: 0.5949 - acc: 0.1865 - val_loss: 0.6006 - val_acc: 0.1931\n",
       "Epoch 5/5\n",
-      "37/37 [==============================] - 10s 262ms/step - loss: 0.5942 - acc: 0.1865 - val_loss: 0.6003 - val_acc: 0.1931\n"
+      "37/37 [==============================] - 1s 21ms/step - loss: 0.5954 - acc: 0.1865 - val_loss: 0.6006 - val_acc: 0.1931\n"
      ]
     }
    ],
