--- a/NLP/NLP try 2.ipynb
+++ b/NLP/NLP try 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "9         0              0             0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "dict"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "['w0', 'w1', 'w2', 'w3', 'w4', 'w5', 'w6', 'w7', 'w8', 'w9']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "['w399995', 'w399996', 'w399997', 'w399998', 'w399999']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -364,181 +364,56 @@
        "         0.8374  ,  0.5685  ,  0.15477 ,  0.23609 , -0.030159,  0.2217  ,\n",
        "         0.1252  , -0.16441 ,  0.070482,  0.3058  ,  0.44701 , -0.18284 ,\n",
        "         0.15271 , -0.025133,  0.31314 , -0.079872,  0.6116  , -0.53703 ,\n",
-       "        -0.13267 ,  0.19063 , -0.50252 , -0.3552  ], dtype=float32),\n",
-       " array([ 0.85797  ,  0.1423   , -0.093675 ,  1.0093   , -0.0026122,\n",
-       "         0.66911  , -0.15071  , -0.13366  , -0.13441  ,  0.23434  ,\n",
-       "         0.73826  ,  0.36164  , -0.45579  , -0.37459  ,  0.37154  ,\n",
-       "         0.29812  , -0.85366  , -0.039475 , -0.35326  , -0.010044 ,\n",
-       "         0.047228 , -0.12809  , -0.21841  ,  0.26015  ,  0.38291  ,\n",
-       "         0.35549  ,  0.29765  ,  0.63584  , -0.063997 , -0.96881  ,\n",
-       "        -0.19418  , -0.40142  ,  0.14809  ,  0.47673  ,  0.043727 ,\n",
-       "         0.48045  , -0.22533  , -0.070448 ,  0.15695  ,  0.83797  ,\n",
-       "         0.14968  , -0.016262 , -0.53767  , -0.36443  , -0.3818   ,\n",
-       "         0.10764  , -0.032935 , -0.23904  , -0.51544  , -0.013281 ,\n",
-       "         0.39437  ,  0.25617  , -0.17606  ,  0.37516  ,  0.024446 ,\n",
-       "         0.26487  ,  0.2161   ,  0.26664  , -0.58468  , -0.89946  ,\n",
-       "         0.62361  , -0.76335  , -0.064714 ,  0.46191  , -0.70076  ,\n",
-       "         0.36312  ,  0.15469  , -0.5006   , -0.0021273, -0.62814  ,\n",
-       "        -0.12527  ,  0.41655  , -0.25125  ,  0.23615  , -0.073482 ,\n",
-       "         0.13813  , -0.53813  ,  0.58113  ,  0.14767  ,  0.098064 ,\n",
-       "        -0.26086  , -0.21043  ,  0.26567  ,  0.22461  ,  0.38775  ,\n",
-       "         0.3631   ,  0.61723  ,  0.0081222,  0.016836 , -0.25644  ,\n",
-       "        -0.14778  ,  0.27542  ,  0.050351 , -0.30945  , -0.30756  ,\n",
-       "        -0.061362 , -0.55957  ,  0.22238  ,  0.38468  , -0.78745  ],\n",
-       "       dtype=float32),\n",
-       " array([ 0.21842  ,  0.025615 , -0.33782  ,  0.13122  , -0.092256 ,\n",
-       "        -0.4214   , -0.18721  , -0.065342 ,  0.32127  , -0.06435  ,\n",
-       "         0.25685  ,  0.030845 , -0.18542  , -0.30155  ,  0.025239 ,\n",
-       "         0.54141  , -0.33269  ,  0.073539 ,  0.21661  , -0.17386  ,\n",
-       "        -0.31075  ,  0.019109 , -0.24848  , -0.38468  ,  0.23499  ,\n",
-       "         0.14209  ,  0.076032 ,  0.089594 , -0.044175 ,  0.58988  ,\n",
-       "        -0.36713  ,  0.30626  ,  0.37464  ,  0.0096218, -0.2935   ,\n",
-       "        -0.22537  , -0.13066  , -0.25596  , -0.24797  , -0.17394  ,\n",
-       "         0.17692  ,  0.16133  , -0.19968  ,  0.014393 , -0.16307  ,\n",
-       "         0.23207  ,  0.47047  ,  0.89159  ,  0.32898  ,  0.51648  ,\n",
-       "         0.12477  , -0.25497  , -0.67107  , -0.49754  ,  0.46218  ,\n",
-       "         0.080378 , -0.044277 ,  0.35397  , -0.53383  , -0.83193  ,\n",
-       "        -0.31219  , -0.20946  ,  0.065739 ,  0.25133  , -0.28931  ,\n",
-       "         0.62126  , -0.31787  , -0.71364  , -0.068284 ,  0.43724  ,\n",
-       "         0.18804  ,  0.14616  ,  0.0054467,  0.075959 , -0.17144  ,\n",
-       "        -0.29128  ,  0.48934  , -0.16748  ,  0.56699  ,  0.1462   ,\n",
-       "        -0.55611  ,  0.15651  ,  0.13497  ,  0.24168  ,  0.34631  ,\n",
-       "         0.32302  , -0.0081364, -0.1245   ,  0.31488  ,  0.53775  ,\n",
-       "         0.24055  , -0.0012988,  0.46663  , -0.0151   ,  0.36463  ,\n",
-       "        -0.41578  ,  0.65869  ,  0.19139  ,  0.16095  ,  0.43966  ],\n",
-       "       dtype=float32),\n",
-       " array([-0.1571  , -0.054694, -0.29505 , -0.04458 , -0.12154 , -0.3314  ,\n",
-       "        -0.30258 , -0.096925,  0.040815, -0.26903 , -0.12977 ,  0.051604,\n",
-       "         0.27424 ,  0.6226  , -0.1438  , -0.017814, -0.25931 , -0.059138,\n",
-       "         0.77433 , -0.11446 , -0.33675 , -0.025696, -0.29008 , -0.671   ,\n",
-       "         0.54886 ,  0.50764 , -0.70342 ,  0.36906 , -0.28576 , -0.15478 ,\n",
-       "         0.47553 , -0.28329 , -0.19563 , -0.20097 ,  0.35477 ,  0.016982,\n",
-       "         0.17129 , -0.25071 ,  0.42894 ,  0.26346 ,  0.098753, -0.064558,\n",
-       "        -0.24272 ,  0.63627 , -0.073134, -0.13947 ,  0.2471  ,  0.41268 ,\n",
-       "        -0.063962, -0.09053 , -0.29299 ,  0.056803, -0.38187 , -0.080419,\n",
-       "         0.27156 ,  0.32085 ,  0.42466 ,  0.72342 , -0.50018 , -0.12736 ,\n",
-       "         0.18204 , -0.17312 ,  0.23076 , -0.021776, -0.16805 , -0.1992  ,\n",
-       "        -0.55561 , -0.14162 , -0.06932 , -0.020178, -0.2221  ,  0.47518 ,\n",
-       "         0.033244,  0.33461 , -0.14548 , -0.057988, -0.44582 ,  0.080926,\n",
-       "         0.60134 ,  0.11573 , -0.45095 , -0.024552,  0.74261 , -0.28526 ,\n",
-       "         0.41027 , -0.11118 ,  0.27391 ,  0.17919 ,  0.23694 , -0.022741,\n",
-       "        -0.25138 , -0.11067 , -0.17918 , -0.29276 ,  0.23915 , -0.15753 ,\n",
-       "        -0.30248 ,  0.16976 , -0.53896 ,  0.038868], dtype=float32),\n",
-       " array([ 1.0106   , -0.42391  , -0.51353  , -0.19112  , -0.056186 ,\n",
-       "         0.084911 ,  0.060639 , -0.65349  , -0.16921  ,  0.13532  ,\n",
-       "         0.040027 ,  0.004616 , -0.18463  , -0.20182  ,  0.10081  ,\n",
-       "         0.0081524, -0.28283  ,  0.10886  ,  0.44837  , -0.52229  ,\n",
-       "        -0.29388  , -0.41756  , -0.66046  ,  0.056017 , -0.68515  ,\n",
-       "         0.12756  ,  0.42659  ,  0.35687  ,  0.20442  ,  0.43915  ,\n",
-       "        -0.16926  ,  0.13434  ,  0.061668 ,  0.048866 ,  0.22967  ,\n",
-       "         0.29368  ,  0.24358  , -0.49957  ,  0.1745   ,  0.26087  ,\n",
-       "         0.51629  ,  0.37057  , -0.028829 , -0.2101   , -0.22327  ,\n",
-       "        -0.080457 ,  0.19821  , -0.16049  ,  0.42075  ,  0.53385  ,\n",
-       "        -0.23761  ,  0.56872  , -0.34764  , -0.3358   , -0.088987 ,\n",
-       "         0.82689  , -0.12648  ,  0.23165  , -0.91325  ,  0.60151  ,\n",
-       "         0.096479 , -0.045025 ,  0.16987  , -0.70423  ,  0.048887 ,\n",
-       "        -0.24376  , -0.15308  , -0.92763  , -0.43913  , -0.25424  ,\n",
-       "         0.31412  ,  0.36159  , -0.26262  ,  0.23019  ,  0.32517  ,\n",
-       "         0.23373  , -0.13866  , -0.07778  ,  0.45951  , -0.10975  ,\n",
-       "        -0.83463  ,  0.34175  , -0.202    , -0.61504  ,  0.63889  ,\n",
-       "         0.046877 ,  0.20673  ,  0.61979  , -0.59651  , -0.046756 ,\n",
-       "         0.019669 ,  0.37674  , -0.13121  , -0.32262  , -0.043401 ,\n",
-       "         0.010389 ,  0.15953  ,  0.33105  , -0.19149  , -0.28363  ],\n",
-       "       dtype=float32),\n",
-       " array([-0.29862  ,  0.068123 , -0.58213  ,  0.10691  , -0.4571   ,\n",
-       "        -0.0030325,  0.2361   ,  0.27917  ,  0.46022  , -0.065295 ,\n",
-       "         0.55696  ,  0.20135  , -0.055101 ,  0.51364  , -0.19199  ,\n",
-       "         0.87403  , -0.19011  , -0.49257  ,  0.26231  , -0.20285  ,\n",
-       "         0.27741  ,  0.31043  , -0.79977  ,  0.12232  ,  0.16965  ,\n",
-       "        -0.13526  , -0.24704  ,  0.21714  , -0.078706 ,  0.032281 ,\n",
-       "        -0.25336  , -0.17543  ,  0.34642  , -0.82946  ,  0.10943  ,\n",
-       "        -0.69256  , -0.21219  , -0.16809  ,  0.3185   ,  0.973    ,\n",
-       "         0.50297  , -0.1309   , -0.038244 ,  0.37344  , -0.033602 ,\n",
-       "        -0.44567  , -0.54847  ,  0.17103  ,  0.034315 ,  0.44555  ,\n",
-       "         0.12566  , -0.067308 ,  0.20184  , -0.48157  ,  0.54178  ,\n",
-       "         0.52492  ,  0.52537  ,  0.19932  , -0.13222  , -0.74463  ,\n",
-       "         0.16724  ,  0.30772  , -0.32821  ,  0.37966  , -0.4619   ,\n",
-       "         0.02071  , -0.52455  , -0.17287  , -0.48025  ,  0.0070926,\n",
-       "         0.51508  ,  0.56624  , -0.0033298,  0.45829  , -0.021729 ,\n",
-       "        -0.57063  , -0.38243  , -0.31494  ,  0.48063  ,  0.0062028,\n",
-       "        -0.62691  , -0.54213  ,  0.61134  , -0.12318  ,  0.12843  ,\n",
-       "         0.75494  ,  0.14795  ,  0.50975  ,  0.19941  ,  0.68938  ,\n",
-       "        -0.38121  ,  0.83289  , -0.47987  , -0.51911  ,  0.36673  ,\n",
-       "        -0.2384   ,  0.81928  , -0.0221   , -0.44586  , -0.35323  ],\n",
-       "       dtype=float32),\n",
-       " array([-0.034671 ,  0.14684  ,  0.80843  , -0.1257   ,  0.5127   ,\n",
-       "        -0.19811  , -0.53094  ,  0.24631  ,  0.68667  ,  0.2055   ,\n",
-       "        -0.5992   ,  0.77206  , -0.27726  ,  0.42051  , -0.1872   ,\n",
-       "        -0.92349  ,  0.26171  , -0.30082  ,  0.29487  , -0.63703  ,\n",
-       "        -0.21128  , -0.28105  , -0.18742  ,  0.038061 ,  0.24106  ,\n",
-       "         0.46322  ,  0.072783 , -0.12444  ,  0.30413  , -0.24411  ,\n",
-       "        -0.35971  , -1.1868   ,  0.5308   , -0.19863  ,  0.66477  ,\n",
-       "        -0.33951  , -0.26881  ,  0.35638  ,  0.80289  ,  0.43077  ,\n",
-       "         0.16077  , -0.89202  , -0.67416  ,  0.23274  , -0.44523  ,\n",
-       "        -0.14998  ,  0.073964 ,  0.73171  ,  0.25056  ,  0.69369  ,\n",
-       "         0.092814 ,  0.27491  , -0.4855   ,  0.65567  , -0.84842  ,\n",
-       "         0.37696  , -0.16056  , -0.2948   ,  0.090226 , -0.52401  ,\n",
-       "        -0.52133  , -0.46227  ,  0.56942  , -0.56629  , -0.21834  ,\n",
-       "        -0.01274  , -0.29033  , -0.65377  , -0.59343  , -0.67973  ,\n",
-       "         0.057324 ,  0.29066  , -0.21132  ,  0.37692  ,  0.41904  ,\n",
-       "        -0.41073  ,  0.631    ,  0.5022   ,  0.14558  ,  0.70745  ,\n",
-       "         0.20284  ,  0.1949   ,  0.4136   ,  0.99501  , -0.02994  ,\n",
-       "        -0.28332  ,  0.68144  ,  0.45669  ,  0.47983  ,  0.38386  ,\n",
-       "         1.0432   ,  0.16586  ,  0.0053005, -0.89511  ,  0.19985  ,\n",
-       "         0.45589  , -1.0217   ,  0.34839  , -0.58673  , -0.50561  ],\n",
-       "       dtype=float32),\n",
-       " array([-3.3698e-01,  2.1659e-01,  2.5485e-02,  3.2704e-01, -1.5618e-01,\n",
-       "        -5.6833e-02, -1.4943e-01, -4.5841e-01,  2.5130e-01,  1.2736e+00,\n",
-       "        -3.2585e-01, -2.3549e-01,  1.3723e+00,  3.9365e-01, -9.4951e-02,\n",
-       "        -2.0197e-01,  2.0810e-01,  5.1862e-02, -5.6565e-01,  3.0612e-01,\n",
-       "         4.2886e-01, -8.5396e-01,  7.3832e-01, -5.0079e-01, -8.5439e-02,\n",
-       "        -2.3224e-01, -4.9171e-01, -2.6501e-02,  3.9999e-01,  9.0462e-02,\n",
-       "         6.6476e-01, -2.0702e-01, -9.5166e-01, -8.1405e-02, -2.7886e-02,\n",
-       "        -2.9394e-01, -7.8521e-02,  9.9243e-02,  4.6534e-03,  5.6452e-01,\n",
-       "        -6.7596e-01,  3.5126e-02,  5.6607e-01,  7.1433e-01,  8.5085e-01,\n",
-       "        -1.0671e-01, -4.4717e-02, -3.0297e-01, -1.0487e+00, -5.7833e-01,\n",
-       "         1.4973e-02, -5.5564e-01, -6.0145e-01,  1.3110e+00,  3.3824e-01,\n",
-       "        -7.6032e-01,  6.3441e-02, -4.0397e-01,  2.2491e+00,  1.3047e-01,\n",
-       "        -1.2614e-01,  1.3287e-02,  2.7946e-01,  4.1918e-01,  5.6304e-01,\n",
-       "        -4.5975e-01, -2.2851e-01, -1.6286e-01, -3.6830e-01,  9.4754e-01,\n",
-       "         2.2954e-01, -8.4006e-01, -1.5663e-01, -3.3836e-01,  9.3305e-01,\n",
-       "         1.8222e-01,  3.3835e-01,  6.4609e-01, -6.4779e-01,  1.4585e-01,\n",
-       "         1.1928e+00,  4.4631e-01,  5.8129e-01,  3.4670e-01, -1.0218e+00,\n",
-       "         3.7942e-01,  3.7631e-01,  1.8056e-01,  1.0794e-01, -7.3293e-01,\n",
-       "         2.6104e-01, -1.6389e-01,  1.2408e-03, -3.2645e-02, -6.1296e-01,\n",
-       "         3.7466e-01,  9.3507e-02,  3.8043e-01,  2.8166e-01, -7.4384e-02],\n",
-       "       dtype=float32),\n",
-       " array([-2.6008e-01, -4.0996e-01, -9.3932e-02,  1.4493e-01, -1.0747e-01,\n",
-       "        -2.1451e-01, -4.7428e-02,  7.8985e-02,  6.1113e-01, -1.3997e-01,\n",
-       "         5.2031e-01,  1.2265e-01, -5.2489e-02, -1.6173e-01,  4.5363e-01,\n",
-       "         2.4310e-01,  2.1951e-01,  4.3915e-01,  2.6192e-01, -5.9575e-02,\n",
-       "        -4.5486e-01, -1.7146e-01, -3.6492e-02,  4.8979e-01, -2.2849e-01,\n",
-       "         2.7555e-01, -9.1405e-02, -1.8666e-01,  4.4547e-01,  1.0349e-01,\n",
-       "         2.1118e-01,  1.1781e-01, -9.6961e-02,  7.0869e-02,  2.1426e-01,\n",
-       "        -2.8088e-01,  4.7261e-01,  1.5646e-01, -1.3871e-01, -3.2666e-01,\n",
-       "         1.5945e-01,  2.7269e-01, -2.2007e-01,  1.8501e-01,  9.5462e-04,\n",
-       "         3.0302e-01, -1.2927e-02, -2.0782e-01,  5.5472e-01,  6.5195e-01,\n",
-       "        -3.7201e-01,  4.2585e-01,  6.1941e-02,  1.5994e-01, -1.7616e-01,\n",
-       "         2.3109e-01,  4.1516e-02,  2.7662e-01, -1.1371e+00, -6.6980e-02,\n",
-       "         4.1807e-02,  1.1924e-01, -2.4597e-01, -6.1425e-01, -3.2010e-01,\n",
-       "         3.3582e-01, -2.9223e-01, -2.9121e-01,  3.9170e-01, -6.8787e-02,\n",
-       "         2.0236e-02,  8.4953e-01,  4.8462e-02,  8.3911e-02, -4.4864e-01,\n",
-       "         3.4577e-01, -3.0179e-01,  2.4450e-01,  6.5423e-01, -1.0838e-01,\n",
-       "        -4.6576e-01, -4.7119e-01,  4.8338e-01,  4.5510e-01,  2.1268e-01,\n",
-       "        -4.6004e-01,  5.9954e-02,  4.3368e-01,  1.2045e-01,  3.6760e-01,\n",
-       "         2.7807e-02,  4.5204e-02, -2.3861e-01, -2.3214e-01,  7.4788e-01,\n",
-       "         4.1043e-01, -4.2824e-02,  6.4540e-01, -3.4478e-01,  1.9421e-01],\n",
-       "       dtype=float32)]"
+       "        -0.13267 ,  0.19063 , -0.50252 , -0.3552  ], dtype=float32)]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(embedded_df.values())[:10]\n",
+    "list(embedded_df.values())[:2]\n",
     "#100 dim vector for each w value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7380\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = df[\"word_representation\"]\n",
+    "print(len(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 160, 162, 271, 305, 313, 318, 329, 365]\n"
+     ]
+    }
+   ],
+   "source": [
+    "maxval = [0]\n",
+    "for line in words:\n",
+    "    if len(line)>max(maxval):\n",
+    "        maxval.append(len(line))\n",
+    "print(maxval)"
    ]
   }
  ],
