Robot tested code (home environment)

--- a/robomaster/EP_dance.ipynb
+++ b/robomaster/EP_dance.ipynb
@@ -10,7 +10,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "data sent is b'robot ip 192.168.1.122' from ('192.168.1.122', 48094)\nCommand socket: ok\n"
+     "text": "data sent is b'robot ip 192.168.1.122' from ('192.168.1.122', 46132)\nCommand socket: ok\n"
     }
    ],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -51,10 +51,11 @@
       "text/plain": "'ok'"
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 12
     }
    ],
    "source": [
+    "# forward swivel reverse\n",
     "robot.move('x 5 y 0 z 0 vxy 0.5')\n",
     "# robot.center()\n",
     "time.sleep(2)\n",
@@ -113,7 +114,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python361064bittil2020pipenv17199de5e80542afbf33ce54dc36357a",
+   "name": "python361064bittil2020pipenvc13e4a599863495fbc0c295eb547fdc7",
    "display_name": "Python 3.6.10 64-bit ('TIL-2020': pipenv)"
   }
  },
